# QA_AI

./: .env.example  .gitignore  README.md  README_USAGE.md  chat_Scaffold_QA_framework_release1_copilot.json  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: qa-implementer.agent.md  qa-planner.agent.md  qa-reviewer.agent.md
.github/prompts/: plan-api-feature-validation.prompt.md  triage-api-run.prompt.md
.github/skills/api-test-design/: SKILL.md
.github/skills/failure-triage/: SKILL.md
agentic_qa_copilot.egg-info/: SOURCES.txt  top_level.txt
ci/jenkins/: Jenkinsfile  run_ci.sh
docs/: architecture.md  copilot-customization-workflows.md  mcp-placeholders.md  rag-architecture.md  rag-placeholders.md  release-1-workflow.md  release-2-browser-validation.md  roadmap.md
docs/rag-seeds/: widget-api-spec.json  widget-failure-patterns.txt  widget-requirements.md
robot/resources/: common.resource
sample_sut/tests/: test_sample_sut.py
src/agentic_qa/: __init__.py  main.py
src/agentic_qa_copilot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/e2e/: test_api_feature_validation_workflow.py
tests/integration/: test_rag_retrieval.py  test_run_service.py
tests/unit/: mcp_demo_server.py  test_browser_executor.py  test_browser_generator.py  test_failure_analysis.py  test_planner.py  test_python_generator.py  test_rag_chunking.py  test_rag_embedder.py  test_rag_retriever.py  test_rag_vector_store.py  test_release_orchestrator.py  test_remediation_advisor.py  test_risk_scorer.py  test_robot_generator.py
(+46 files in other folders)
